[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freeconf"
version = "0.1.0"
dependencies = [
    "grpcio",
    "google-api-python-client"
]

[project.optional-dependencies]
dev = ["grpcio_tools", "requests"]

[project.scripts]
fc-lang-install = "freeconf.install:run"